<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/home_cross_promo"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@{vm.pokemonInfo.idString}"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:translationZ="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="#001" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="12dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:translationZ="100dp"
        android:background="@drawable/back_24"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/colorPrimary"
        android:elevation="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginBottom="20dp"
        android:scaleType="centerCrop"
        android:translationZ="100dp"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/background"
        android:elevation="10dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="1dp">

            <!-- Contenido del LinearLayout -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{pokemon.name}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header"
                tools:text="bulbasur" />


            <com.skydoves.androidribbon.RibbonRecyclerView
                android:id="@+id/ribbonRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:ribbon_recycler_orientation="horizontal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/weight"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{vm.pokemonInfo.weightString}"
                    android:textSize="21sp"
                    app:layout_constraintEnd_toStartOf="@id/height"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ribbonRecyclerView"
                    tools:text="24.0 KG" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/height"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{vm.pokemonInfo.heightString}"
                    android:textSize="21sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/weight"
                    app:layout_constraintTop_toTopOf="@id/weight"
                    tools:text="11 M" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/weight_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/weight"
                    android:textColor="@color/white_56"
                    app:layout_constraintEnd_toStartOf="@id/height"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weight" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/height_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/height"
                    android:textColor="@color/white_56"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/weight"
                    app:layout_constraintTop_toBottomOf="@id/height" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stats_title"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/base_stats"
                android:textColor="@color/white_93"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weight_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/hp"
                    android:textColor="@color/white_70"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/stats_title" />

                <com.skydoves.progressview.ProgressView
                    android:id="@+id/progress_hp"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginStart="38dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="@id/hp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/hp"
                    app:layout_constraintTop_toTopOf="@id/hp"
                    app:progressView_colorBackground="@color/white"
                    app:progressView_colorProgress="@color/colorPrimary"
                    app:progressView_highlightAlpha="0.8"
                    app:progressView_highlightWidth="1dp"
                    app:progressView_labelColorInner="@color/white"
                    app:progressView_labelColorOuter="@color/black"
                    app:progressView_labelSize="13sp"
                    app:progressView_labelSpace="10dp"
                    app:progressView_labelText="achieve 10%"
                    app:progressView_labelTypeface="bold"
                    app:progressView_padding="1dp"
                    app:progressView_progress="10"
                    app:progressView_radius="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/attack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/atk"
                    android:textColor="@color/white_70"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hp" />

                <com.skydoves.progressview.ProgressView
                    android:id="@+id/pvatk"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="@id/attack"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/progress_hp"
                    app:layout_constraintTop_toTopOf="@id/attack"
                    app:progressView_colorBackground="@color/white"
                    app:progressView_colorProgress="@color/md_orange_100"
                    app:progressView_highlightAlpha="0.8"
                    app:progressView_highlightWidth="1dp"
                    app:progressView_labelColorInner="@color/white"
                    app:progressView_labelColorOuter="@color/black"
                    app:progressView_labelSize="13sp"
                    app:progressView_labelSpace="10dp"
                    app:progressView_labelText="achieve 10%"
                    app:progressView_labelTypeface="bold"
                    app:progressView_padding="1dp"
                    app:progressView_progress="10"
                    app:progressView_radius="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/defense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/def"
                    android:textColor="@color/white_70"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/attack" />

                <com.skydoves.progressview.ProgressView
                    android:id="@+id/pvdef"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="@id/defense"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/progress_hp"
                    app:layout_constraintTop_toTopOf="@id/defense"
                    app:progressView_colorBackground="@color/white"
                    app:progressView_colorProgress="@color/md_blue_200"
                    app:progressView_highlightAlpha="0.8"
                    app:progressView_highlightWidth="1dp"
                    app:progressView_labelColorInner="@color/white"
                    app:progressView_labelColorOuter="@color/black"
                    app:progressView_labelSize="13sp"
                    app:progressView_labelSpace="10dp"
                    app:progressView_labelText="achieve 10%"
                    app:progressView_labelTypeface="bold"
                    app:progressView_padding="1dp"
                    app:progressView_progress="10"
                    app:progressView_radius="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/spd"
                    android:textColor="@color/white_70"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/defense" />

                <com.skydoves.progressview.ProgressView
                    android:id="@+id/pvspd"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="@id/speed"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/progress_hp"
                    app:layout_constraintTop_toTopOf="@id/speed"
                    app:progressView_colorBackground="@color/white"
                    app:progressView_colorProgress="@color/flying"
                    app:progressView_highlightAlpha="0.8"
                    app:progressView_highlightWidth="1dp"
                    app:progressView_labelColorInner="@color/white"
                    app:progressView_labelColorOuter="@color/black"
                    app:progressView_labelSize="13sp"
                    app:progressView_labelSpace="10dp"
                    app:progressView_labelText="achieve 10%"
                    app:progressView_labelTypeface="bold"
                    app:progressView_padding="1dp"
                    app:progressView_progress="10"
                    app:progressView_radius="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/exp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/exp"
                    android:textColor="@color/white_70"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/speed" />

                <com.skydoves.progressview.ProgressView
                    android:id="@+id/pvexp"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="@id/exp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/progress_hp"
                    app:layout_constraintTop_toTopOf="@id/exp"
                    app:progressView_colorBackground="@color/white"
                    app:progressView_colorProgress="@color/md_green_200"
                    app:progressView_highlightAlpha="0.8"
                    app:progressView_highlightWidth="1dp"
                    app:progressView_labelColorInner="@color/white"
                    app:progressView_labelColorOuter="@color/black"
                    app:progressView_labelSize="13sp"
                    app:progressView_labelSpace="10dp"
                    app:progressView_labelText="achieve 10%"
                    app:progressView_labelTypeface="bold"
                    app:progressView_padding="1dp"
                    app:progressView_progress="10"
                    app:progressView_radius="12dp" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>




</androidx.constraintlayout.widget.ConstraintLayout>